[gd_scene load_steps=9 format=2]

[ext_resource path="res://Tileset/images/Tileset.png" type="Texture" id=1]
[ext_resource path="res://Sign/Sign.gd" type="Script" id=2]
[ext_resource path="res://TitleScreen/fonts/mybadfont2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sign/sounds/Blip_Select5.wav" type="AudioStream" id=4]
[ext_resource path="res://Sign/Triangle.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "show_text"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Sign" type="Sprite"]
pause_mode = 2
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 96, 32, 32 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupDialog" type="PopupDialog" parent="CanvasLayer"]
pause_mode = 2
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PopupDialog"]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 220.0
color = Color( 0.364706, 0.152941, 0.364706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PopupDialog/ColorRect"]
margin_left = 10.0
margin_top = 10.0
margin_right = 750.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
custom_constants/line_spacing = 8
text = "TESTING
MULTILINE DIALOG
LOOKS JUST LIKE THIS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/PopupDialog"]
anims/show_text = SubResource( 3 )

[node name="Triangle" type="Node2D" parent="CanvasLayer/PopupDialog"]
visible = false
script = ExtResource( 5 )

[node name="TextSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="CanvasLayer/PopupDialog/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
